fix wrapping issue.

--- a/styleguide/source/assets/scss/03-organisms/_related_coverage.scss
+++ b/styleguide/source/assets/scss/03-organisms/_related_coverage.scss
@@ -100,11 +100,5 @@ promo-embed {
         padding-left: $gutter;
       }
     }
-    @include breakpoint($bp-small) {
-      + ul,
-      + p {
-        width: 50%;
-      }
-    }
   }
 }
